--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 authors = ["TheOnlyMrCat <signupforforums5@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "run"
+path = "src/main.rs"
 
 [build-dependencies]
 lalrpop = { version = "0.19.0", features = ["lexer"] } # LALR parser generator
