--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "runscript"
-version = "0.9.0"
+version = "1.0.0-rc.1"
 description = "Like make, but for running"
 license = "MIT"
 readme = "README.md"
