--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "runscript"
-version = "1.2.0-pre.2"
+version = "1.3.0-rc.1"
 description = "Like make, but for running"
 license = "MIT"
 readme = "README.md"
@@ -17,10 +17,10 @@ name = "run"
 path = "src/main.rs"
 
 [dependencies]
-getopts = "0.2"        # Command-line option parsing
-termcolor = "1.1"      # Terminal colouring
-filenamegen = "0.2"    # Glob parsing and walking
-anyhow = "1.0"         # Trait-based error type
-enum-map = "0.6"     # Array-based map over enum constants
+getopts = "0.2"     # Command-line option parsing
+termcolor = "1.1"   # Terminal colouring
+filenamegen = "0.2" # Glob parsing and walking
+anyhow = "1.0"      # Trait-based error type
+enum-map = "0.6"    # Array-based map over enum constants
 
 trace = { version = "0.1", optional = true }
