--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "runscript"
-version = "1.3.0-rc.2"
+version = "1.3.0"
 description = "Like make, but for running"
 license = "MIT"
 readme = "README.md"
