--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "runscript"
-version = "1.3.0"
-description = "Like make, but for running"
+version = "1.3.1"
+description = "Project execution script manager"
 license = "MIT"
 readme = "README.md"
 categories = ["command-line-utilities", "development-tools::build-utils"]
