--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "runscript"
-version = "1.3.1"
+version = "2.0.0-alpha.1"
 description = "Project execution script manager"
 license = "MIT"
 readme = "README.md"
@@ -20,12 +20,13 @@ path = "src/main.rs"
 name = "runscript"
 
 [dependencies]
-getopts = "0.2" # Command-line option parsing
-termcolor = "1.1" # Terminal colouring
-filenamegen = "0.2" # Glob parsing and walking
-anyhow = "1.0" # Trait-based error type
-enum-map = "0.6" # Array-based map over enum constants
+getopts = "0.2"
+termcolor = "1.1"
+filenamegen = "0.2"
+anyhow = "1.0"
+enum-map = "0.6"
 atty = "0.2"
+either = "1.6.1"
+conch-parser = "0.1"
 
 trace = { version = "0.1", optional = true }
-either = "1.6.1"
