--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,5 +28,6 @@ enum-map = "0.6"
 atty = "0.2"
 either = "1.6.1"
 conch-parser = "0.1"
+linked-hash-map = "0.5.4"
 
 trace = { version = "0.1", optional = true }
