--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,8 +26,9 @@ filenamegen = "0.2"
 anyhow = "1.0"
 enum-map = "0.6"
 atty = "0.2"
-either = "1.6.1"
+either = "1.6"
 conch-parser = "0.1"
-linked-hash-map = "0.5.4"
+linked-hash-map = "0.5"
+crossbeam-utils = "0.8"
 
 trace = { version = "0.1", optional = true }
