--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "runscript"
-version = "2.0.0-alpha.1"
+version = "2.0.0-alpha.2"
 description = "Project execution script manager"
 license = "MIT"
 readme = "README.md"
@@ -22,14 +22,12 @@ name = "runscript"
 [dependencies]
 getopts = "0.2"
 termcolor = "1.1"
-filenamegen = "0.2"
-anyhow = "1.0"
 enum-map = "0.6"
 atty = "0.2"
-either = "1.6"
 conch-parser = "0.1"
 linked-hash-map = "0.5"
 crossbeam-utils = "0.8"
+itertools = "0.10.1"
 
 trace = { version = "0.1", optional = true }
-itertools = "0.10.1"
+glob = "0.3.0"
