--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,13 +12,6 @@ edition = "2018"
 [profile.release]
 panic = "abort"
 
-[[bin]]
-name = "run"
-path = "src/main.rs"
-
-[lib]
-name = "runscript"
-
 [dependencies]
 getopts = "0.2"
 termcolor = "1.1"
@@ -31,3 +24,6 @@ itertools = "0.10.1"
 
 trace = { version = "0.1", optional = true }
 glob = "0.3.0"
+
+[target.'cfg(unix)'.dependencies]
+nix = "0.23"
