--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2018"
 
 [[bin]]
 name = "run"
-path = "main.rs"
+path = "src/main.rs"
 
 [profile.release]
 panic = "abort"
@@ -23,11 +23,10 @@ enum-map = "0.6"
 atty = "0.2"
 conch-parser = "0.1"
 linked-hash-map = "0.5"
-crossbeam-utils = "0.8"
 itertools = "0.10.1"
+glob = "0.3.0"
 
 trace = { version = "0.1", optional = true }
-glob = "0.3.0"
 
 [target.'cfg(unix)'.dependencies]
 nix = "0.23"
