--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,11 @@ conch-parser = "0.1"
 linked-hash-map = "0.5"
 itertools = "0.10.1"
 glob = "0.3.0"
+exitcode = "1.1"
+
+# Panic handling
+uuid = { version = "0.8", features = ["v4"], default-features = false }
+os_info = { version = "3.0" }
 
 trace = { version = "0.1", optional = true }
 
