--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,12 +23,16 @@ linked-hash-map = "0.5"
 itertools = "0.10.1"
 glob = "0.3.0"
 exitcode = "1.1"
+config = { version = "0.11", features = ["toml"] }
 
 # Panic handling
 uuid = { version = "0.8", features = ["v4"], default-features = false }
 os_info = { version = "3.0" }
 
 trace = { version = "0.1", optional = true }
+
+[target.'cfg(windows)'.dependencies]
+winapi = "0.3"
 
 [target.'cfg(unix)'.dependencies]
 nix = "0.23"
