--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,14 +16,13 @@ path = "src/main.rs"
 [dependencies]
 clap = "3.0"
 termcolor = "1.1"
-enum-map = "0.6"
 atty = "0.2"
 conch-parser = "0.1"
-linked-hash-map = "0.5"
+indexmap = "1.7"
 itertools = "0.10.1"
 glob = "0.3.0"
 exitcode = "1.1"
-config = { version = "0.11", features = ["toml"] }
+config = { version = "0.11", features = ["toml"] } # TODO: Implement it myself
 
 # Panic handling
 uuid = { version = "0.8", features = ["v4"], default-features = false }
