--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "runscript"
-version = "2.0.0-alpha.2"
+version = "2.0.0-beta.1"
 description = "Project execution script manager"
 license = "MIT"
 readme = "README.md"
