--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,21 +14,19 @@ name = "run"
 path = "src/main.rs"
 
 [dependencies]
-clap = "3.1"
-termcolor = "1.1"
 atty = "0.2"
+clap = "3.1"
 conch-parser = "0.1"
+exitcode = "1.1"
+glob = "0.3.0"
 indexmap = "1.7"
 itertools = "0.10.1"
-glob = "0.3.0"
-exitcode = "1.1"
-tempfile = "3.3.0"
+os_info = "3.2"
 serde = { version = "1.0.136", features = ["derive"] }
+tempfile = "3.3.0"
+termcolor = "1.1"
 toml = "0.5.8"
-
-# Panic handling
 uuid = { version = "0.8", features = ["v4"], default-features = false }
-os_info = { version = "3.0" }
 
 [target.'cfg(windows)'.dependencies]
 winapi = "0.3"
