--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "runscript"
 version = "1.0.0-beta.5"
-description = "Project execution script manager"
+description = "Project script manager and executor"
 license = "MIT"
 readme = "README.md"
 categories = ["command-line-utilities", "development-tools::build-utils"]
@@ -19,7 +19,7 @@ dev-panic = []
 
 [dependencies]
 atty = "0.2"
-clap = "3.1"
+clap = { version = "3.1", features = ["derive"] }
 exitcode = "1.1"
 glob = "0.3.0"
 indexmap = "1.7"
