--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,9 @@ name = "run"
 path = "src/main.rs"
 
 [features]
+default = ["panic-hook"]
+panic-hook = ["os_info", "uuid"]
 old-parser = []
-dev-panic = []
 
 [dependencies]
 atty = "0.2"
@@ -24,12 +25,14 @@ exitcode = "1.1"
 glob = "0.3.0"
 indexmap = "1.7"
 itertools = "0.10.1"
-os_info = "3.2"
 serde = { version = "1.0.136", features = ["derive"] }
 tempfile = "3.3.0"
 termcolor = "1.1"
 toml = "0.5.8"
-uuid = { version = "0.8", features = ["v4"], default-features = false }
+
+# Panic hook dependencies
+os_info = { version = "3.2", optional = true }
+uuid = { version = "0.8", features = ["v4"], default-features = false, optional = true }
 
 [target.'cfg(windows)'.dependencies]
 winapi = "0.3"
