--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,9 @@ repository = "https://github.com/TheOnlyMrCat/runscript"
 authors = ["TheOnlyMrCat <skylifegame@gmail.com>"]
 edition = "2021"
 
+[profile.dev]
+split-debuginfo = "unpacked"
+
 [[bin]]
 name = "run"
 path = "src/main.rs"
@@ -18,10 +21,14 @@ default = ["panic-hook"]
 panic-hook = ["os_info", "uuid"]
 old-parser = []
 
+[build-dependencies]
+build-info-build = "0.0.27"
+
 [dependencies]
 atty = "0.2.14"
+build-info = "0.0.27"
 cfg-if = "1.0.0"
-clap = { version = "3.2.22", features = ["derive"] }
+clap = { version = "4.0.9", features = ["derive"] }
 exitcode = "1.1.2"
 glob = "0.3.0"
 indexmap = "1.9.1"
@@ -31,7 +38,7 @@ tempfile = "3.3.0"
 termcolor = "1.1.3"
 toml = "0.5.9"
 
-# Panic hook dependencies
+# [feature = "panic-hook"]
 os_info = { version = "3.5.1", optional = true }
 uuid = { version = "1.1.2", features = ["v4"], default-features = false, optional = true }
 
@@ -39,4 +46,4 @@ uuid = { version = "1.1.2", features = ["v4"], default-features = false, optiona
 winapi = "0.3.9"
 
 [target.'cfg(unix)'.dependencies]
-nix = "0.24.2"
+nix = "0.25.0"
