Add theme support
Remove phase-specific command highlighting

This wasn't actually implemented in the first place

--- a/tests/cli/resolve.toml
+++ b/tests/cli/resolve.toml
@@ -1,2 +1,2 @@
-args = [ "alpha:run", "bravo:clean", ":test", "charlie", "delta:alt2"]
+args = ["--color=always", "alpha:run", "bravo:clean", ":test", "charlie", "delta:alt2"]
 fs.cwd = "in"
