--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,8 @@ panic-hook = ["os_info", "uuid"]
 old-parser = []
 
 [dependencies]
+runscript-parse = { path = "runscript-parse" }
+
 cfg-if = "1.0.0"
 clap = { version = "4.1.7", features = ["derive"] }
 exitcode = "1.1.2"
