--- a/runscript-parse/Cargo.toml
+++ b/runscript-parse/Cargo.toml
@@ -3,8 +3,16 @@ name = "runscript-parse"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name = "runscript_parse"
+
+[[bin]]
+name = "repl"
+required-features = ["reedline"]
+
 [dependencies]
 chumsky = "0.8.0"
+reedline = { version = "0.16.0", optional = true }
 
 [dev-dependencies]
 pretty_assertions = "1.3.0"
