--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ old-parser = []
 runscript-parse = { path = "runscript-parse" }
 
 cfg-if = "1.0.0"
+chumsky = "0.9.0"
 clap = { version = "4.1.7", features = ["derive"] }
 exitcode = "1.1.2"
 glob = "0.3.1"
